# hf-serve

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cpu  Dockerfile.google  LICENSE  README.md  TODO.md  entrypoint-google.sh  entrypoint.sh  pyproject.toml
.github/workflows/: pre-commit-checks.yaml  trufflehog.yaml
features/: discard-left.md  zero-footprint-idle-unload.md
src/hf_inference_sdk/: cli.py  cli_utils.py  file_validator.py  idle.py  installer.py  logging.py  server.py  server_utils.py
src/hf_inference_sdk/compatibility/: backwards.py
src/hf_inference_sdk/compatibility/google/routers/: predict.py
src/hf_inference_sdk/compatibility/google/schemas/diffusers/: text_to_image.py
src/hf_inference_sdk/compatibility/google/schemas/sentence_transformers/: feature_extraction.py  sentence_similarity.py  text_ranking.py
src/hf_inference_sdk/compatibility/google/schemas/transformers/: any_to_any.py  audio_classification.py  automatic_speech_recognition.py  fill_mask.py  (+15 more)
src/hf_inference_sdk/middleware/: __init__.py  logging.py
src/hf_inference_sdk/openai/routers/: __init__.py  chat_completions.py  embeddings.py  images_generations.py
src/hf_inference_sdk/openai/schemas/: chat_completions.py
src/hf_inference_sdk/openai/tasks/: chat_completions.py  embeddings.py  images_generations.py
src/hf_inference_sdk/routers/: __init__.py  custom.py  predict.py  predict_image.py  predict_media.py
src/hf_inference_sdk/serde/: __init__.py  audio.py  image.py
src/hf_inference_sdk/tasks/: custom.py  predictor.py
src/hf_inference_sdk/tasks/diffusers/: text_to_image.py
src/hf_inference_sdk/tasks/sentence_transformers/: feature_extraction.py  sentence_similarity.py  text_ranking.py
src/hf_inference_sdk/tasks/transformers/: any_to_any.py  audio_classification.py  automatic_speech_recognition.py  fill_mask.py  image_classification.py  image_segmentation.py  image_text_to_text.py  mask_generation.py  object_detection.py  question_answering.py  summarization.py  table_question_answering.py  text_classification.py  text_generation.py  token_classification.py  translation.py  visual_question_answering.py  zero_shot_audio_classification.py  zero_shot_classification.py  zero_shot_image_classification.py
src/hf_inference_sdk/types/: __init__.py  task.py
src/hf_serve/: backwards.py  cli.py  installer.py  logging.py  server.py  server_utils.py  types.py
src/hf_serve/clouds/: azure.py
src/hf_serve/compatibility/: azure.py  backwards.py  text_embeddings_inference.py
src/hf_serve/compatibility/google/routers/: health.py  predict.py
src/hf_serve/custom_models/: loader.py
src/hf_serve/custom_models/qwen3_reranker/: predictor.py
src/hf_serve/custom_models/text_ranking/qwen3/: predictor.py
src/hf_serve/middleware/: __init__.py  logging.py
src/hf_serve/models/: facebook__sam3.py
src/hf_serve/openai/routers/: __init__.py  audio_transcriptions.py  chat_completions.py  embeddings.py  images_generations.py  speech.py
src/hf_serve/openai/schemas/: audio_transcriptions.py  chat_completions.py  embeddings.py  images_generations.py  speech.py
src/hf_serve/openai/tasks/: audio_transcriptions.py  chat_completions.py  embeddings.py  images_generations.py  speech.py
src/hf_serve/routers/: __init__.py  _file_validator.py  any.py  custom.py  metrics.py  predict.py  predict_image.py  predict_media.py  routers_utils.py
src/hf_serve/serde/: __init__.py  audio.py  image.py
src/hf_serve/tasks/: custom.py  predictor.py
src/hf_serve/tasks/diffusers/: text_to_image.py
src/hf_serve/tasks/sentence_transformers/: feature_extraction.py  sentence_similarity.py  text_ranking.py
src/hf_serve/tasks/transformers/: any_to_any.py  audio_classification.py  automatic_speech_recognition.py  fill_mask.py  image_classification.py  image_segmentation.py  image_text_to_text.py  image_to_image.py  mask_generation.py  object_detection.py  question_answering.py  summarization.py  table_question_answering.py  text_classification.py  text_generation.py  text_to_speech.py  token_classification.py  translation.py  visual_question_answering.py  zero_shot_audio_classification.py  zero_shot_classification.py  zero_shot_image_classification.py
src/hf_serve/types/: __init__.py  form.py  task.py
src/huggingface_inference_toolkit/: backwards.py  cli.py  logging.py  server.py  utils.py  workers.py
src/huggingface_inference_toolkit/clouds/: azure.py
src/huggingface_inference_toolkit/middleware/: __init__.py  logging.py  prometheus.py  request_id.py
src/huggingface_inference_toolkit/models/: microsoft--magma-8b.py
src/huggingface_inference_toolkit/openai/routers/: __init__.py  chat_completions.py  images.py  images_generations.py  models.py
src/huggingface_inference_toolkit/openai/schemas/: chat_completions.py
src/huggingface_inference_toolkit/openai/tasks/: chat_completions.py  images.py  images_generations.py
src/huggingface_inference_toolkit/routers/: __init__.py  custom.py  health.py  metrics.py  predict.py  predict_media.py
src/huggingface_inference_toolkit/routers/openai/: chat_completions.py
src/huggingface_inference_toolkit/serde/: __init__.py  audio.py  image.py  types.py
src/huggingface_inference_toolkit/tasks/: custom.py  predictor.py
src/huggingface_inference_toolkit/tasks/diffusers/: text_to_image.py
src/huggingface_inference_toolkit/tasks/sentence_transformers/: feature_extraction.py  sentence_embeddings.py  sentence_ranking.py  sentence_similarity.py  text_ranking.py
src/huggingface_inference_toolkit/tasks/transformers/: audio_classification.py  automatic_speech_recognition.py  fill_mask.py  image_classification.py  image_segmentation.py  image_text_to_text.py  object_detection.py  question_answering.py  summarization.py  table_question_answering.py  text_classification.py  text_generation.py  token_classification.py  translation.py  zero_shot_audio_classification.py  zero_shot_classification.py
src/huggingface_inference_toolkit/tasks/transformers/text_generation/: __init__.py  schemas.py  task.py
tests/unit/: test_cli.py  test_server.py
(+26 files in other folders)
