[project]
name = "hf-serve"
version = "0.0.1rc7"
description = "Production-ready inference API on top of Hugging Face (Transformers, Diffusers, and Sentence-Transformers)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
    "prometheus-client>=0.21.1",
    "torch>=2.5.1,<2.8.0",
    "torchvision",
    # NOTE: `torchcodec` as opposed to `torch` won't install the CUDA-compatible
    # version by default but rather the CPU-only one.
    # Reference: https://github.com/meta-pytorch/torchcodec?tab=readme-ov-file#installing-torchcodec
    "torchcodec<0.6",
    "diffusers>=0.36.0",
    # NOTE: `torch-speech` includes `phonemizer` which also requires a backend,
    # that needs to be installed as a system dependency e.g. `espeak-ng`
    "transformers[accelerate,hf-xet,hub-kernels,torch-speech]>=4.57.3,<5.0.0rc0",
    "timm>=1.0.21",
    "pydantic>=2.10.5",
    "sentence-transformers>=5.1.2",
    # NOTE: `optimum[onnxruntime]` seems to have a cap on `transformers<4.53.0`
    # NOTE: `optimum` for ONNX recently migrated to `optimum-onnx` at https://github.com/huggingface/optimum-onnx
    # but still has the cap on `transformers<4.56.0` which prevents us from relying on `main`
    # "sentence-transformers[onnx]>=5.0.0",
    # NOTE: for GPU that'd be the following
    # "sentence-transformers[onnx-gpu]>=5.0.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.3",
    "peft>=0.14.0",
    "pillow>=11.1.0",
    # NOTE: `pydub` is required for `automatic-speech-recognition` to parse the
    # audio bytes and calculate the audio duration in seconds, hence the batch
    # size too
    "pydub>=0.25.0",
    "python-multipart>=0.0.20",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
cpu = ["torch>=2.5.1,<2.8.0", "torchvision", "torchcodec<0.6"]
cuda = ["torch>=2.5.1,<2.8.0", "torchvision", "torchcodec<0.6"]
flash-attn = ["flash-attn==2.8.3"]

# causal-1dconv = ["causal_conv1d==1.5.2"]
# NOTE: `flash-linear-attention` has a lock on `transformers`<4.5.6.0
# flash-linear-attention = ["flash-linear-attention==0.3.2"]

# NOTE: useful for Intel `auto-round` quants, most likely can be installed on the fly if needed (?)
# e.g. https://huggingface.co/Intel/Qwen3-Next-80B-A3B-Instruct-int4-mixed-AutoRound/tree/main
# Reference: https://github.com/intel/auto-round
# quantization = ["auto-round>=0.5.0", "gptqmodel==4.2.5", "bitsandbytes>=0.47.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hf-serve = "hf_serve.cli:main"

[tool.ruff]
line-length = 112

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
force-single-line = false

[tool.uv]
conflicts = [
    [
      { extra = "cpu" },
      { extra = "cuda" },
    ],
]

[tool.uv.sources]
# NOTE: To support SAM 3, `transformers` need to use this revision as per:
# https://github.com/huggingface/transformers/pull/42285
# transformers = { git = "https://github.com/huggingface/transformers", rev = "1fba72361e8e0e865d569f7cd15e5aa50b41ac9a" }
# diffusers = { git = "https://github.com/huggingface/diffusers", rev = "main" }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cuda" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cuda" },
]
torchcodec = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

# causal-1dconv = [{ requirement = "torch", match-runtime = true }]
# flash-linear-attention = [{ requirement = "torch", match-runtime = true }]
# gptqmodel = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
