[project]
name = "hf-inference-sdk"
version = "0.1.0"
description = "Hugging Face Inference API for Transformers, Diffusers and Sentence Transformers, written in Python."
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Alvaro Bartolome", email = "alvaro.bartolome@huggingface.co" },
]
maintainers = [
  { name = "Alvaro Bartolome", email = "alvaro.bartolome@huggingface.co" },
  { name = "Juan Julian Cea", email = "juan.moran@huggingface.co" },
  { name = "Erik Kaunismäki", email = "erik.kaunismaki@huggingface.co" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
    "prometheus-client>=0.21.1",
    "torch",
    "torchvision",
    # NOTE: `torchcodec` as opposed to `torch` won't install the CUDA-compatible
    # version by default but rather the CPU-only one.
    # Reference: https://github.com/meta-pytorch/torchcodec?tab=readme-ov-file#installing-torchcodec
    "torchcodec",
    # NOTE: `diffusers` won't complain, but support for `transformers` 5.0.0+
    # is still work in progress as per https://github.com/huggingface/diffusers/pull/12976
    "diffusers>=0.36.0",
    # NOTE: `torch-speech` includes `phonemizer` which also requires a backend,
    # that needs to be installed as a system dependency e.g. `espeak-ng`
    "transformers[accelerate,hf-xet,hub-kernels,torch-speech]>=5.0.0",
    "timm>=1.0.21",
    "pydantic>=2.10.5",
    # NOTE: `optimum[onnxruntime]` seems to have a cap on `transformers<4.53.0`
    # NOTE: `optimum` for ONNX recently migrated to `optimum-onnx` at https://github.com/huggingface/optimum-onnx
    # but still has the cap on `transformers<4.56.0` which prevents us from relying on `main`
    # "sentence-transformers[onnx]>=5.0.0",
    # NOTE: for GPU that'd be the following
    # "sentence-transformers[onnx-gpu]>=5.0.0",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.3",
    "peft>=0.14.0",
    "pillow>=11.1.0",
    # NOTE: `pydub` is required for `automatic-speech-recognition` to parse the
    # audio bytes and calculate the audio duration in seconds
    "pydub>=0.25.0",
    "python-multipart>=0.0.20",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
cpu = ["torch>=2.5.1,<2.8.0", "torchvision", "torchcodec<0.6"]
cuda = ["torch>=2.5.1,<2.8.0", "torchvision", "torchcodec<0.6"]
cuda-130 = ["torch>2.8.0", "torchvision", "torchcodec"]
flash-attn = ["flash-attn==2.8.3"]

# causal-1dconv = ["causal_conv1d==1.5.2"]
# NOTE: `flash-linear-attention` has a lock on `transformers`<4.5.6.0
# flash-linear-attention = ["flash-linear-attention==0.3.2"]

# NOTE: useful for Intel `auto-round` quants, most likely can be installed on the fly if needed (?)
# e.g. https://huggingface.co/Intel/Qwen3-Next-80B-A3B-Instruct-int4-mixed-AutoRound/tree/main
# Reference: https://github.com/intel/auto-round
# quantization = ["auto-round>=0.5.0", "gptqmodel==4.2.5", "bitsandbytes>=0.47.0"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
hf-inference-sdk = "hf_inference_sdk.cli:main"

[tool.ruff]
line-length = 112

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
force-single-line = false

[tool.uv]
conflicts = [
    [
      { extra = "cpu" },
      { extra = "cuda" },
      { extra = "cuda-130" },
    ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cuda" },
  { index = "pytorch-cu130", extra = "cuda-130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cuda" },
  { index = "pytorch-cu130", extra = "cuda-130" },
]
torchcodec = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cuda" },
  { index = "pytorch-cu130", extra = "cuda-130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
# causal-1dconv = [{ requirement = "torch", match-runtime = true }]
# flash-linear-attention = [{ requirement = "torch", match-runtime = true }]
# gptqmodel = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
