[project]
name = "hf-serve"
version = "0.1.3"
description = "Experimental Hugging Face API for Transformers, Diffusers and Sentence Transformers, written in Python."
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Alvaro Bartolome", email = "alvaro.bartolome@huggingface.co" },
]
maintainers = [
  { name = "Alvaro Bartolome", email = "alvaro.bartolome@huggingface.co" },
  { name = "Juan Julian Cea", email = "juan.moran@huggingface.co" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
    # Floor pinned to the version that fixes CVE-2026-48710 (GHSA-86qp-5c8j-p5mr),
    # Host header poisons request.url.path. The Starlette range FastAPI allows
    # would otherwise let a fresh resolve drop back to vulnerable 0.x or 1.0.0.
    "starlette>=1.0.1",
    "prometheus-client>=0.21.1",
    "torch",
    "torchvision",
    # NOTE: `diffusers` won't complain, but support for `transformers` 5.0.0+
    # is still work in progress as per https://github.com/huggingface/diffusers/pull/12976
    "diffusers>=0.37.0",
    # NOTE: `torch-speech` is now `audio` in Transformers 5.0+ and `phonemizer`
    # is included as a default dependency instead of an `audio` specific one.
    # Anyway, `audio` models might need some system dependencies e.g. `espeak-ng`
    "transformers[accelerate,audio,chat_template,kernels,video,vision]>=5.9.0",
    "pydantic>=2.10.5",
    # NOTE: `optimum[onnxruntime]` seems to have a cap on `transformers<4.53.0`
    # NOTE: `optimum` for ONNX recently migrated to `optimum-onnx` at https://github.com/huggingface/optimum-onnx
    # but still has the cap on `transformers<4.56.0` which prevents us from relying on `main`
    # "sentence-transformers[onnx]>=5.0.0",
    # NOTE: for GPU that'd be the following
    # "sentence-transformers[onnx-gpu]>=5.0.0",
    "sentence-transformers>=5.5.1",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.3",
    "peft>=0.14.0",
    "pillow>=11.1.0",
    # NOTE: `pydub` is required for `automatic-speech-recognition` to parse the
    # audio bytes and calculate the audio duration in seconds
    "pydub>=0.25.0",
    "python-multipart>=0.0.20",
    "python-magic>=0.4.27",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
# NOTE: `torchaudio` is pinned to `2.11.0` (rather than following the `torch` range below) as that's
# the only version currently published with CUDA-specific wheels on the PyTorch registries; other
# versions only ship a single generic PyPI wheel that hardcodes one CUDA build (currently 13.0), which
# then hard-errors on import against a `torch` built for a different CUDA version.
cpu = ["torch>=2.11,<2.14", "torchvision", "torchaudio==2.11.0"]
cuda = ["torch>=2.11,<2.14", "torchvision", "torchaudio==2.11.0"]
cuda-128 = ["torch>=2.11,<2.14", "torchvision", "torchaudio==2.11.0"]
cuda-130 = ["torch>=2.11,<2.14", "torchvision", "torchaudio==2.11.0"]

# causal-1dconv = ["causal_conv1d==1.5.2"]
# NOTE: `flash-linear-attention` has a lock on `transformers`<4.5.6.0
# flash-linear-attention = ["flash-linear-attention==0.3.2"]

# NOTE: useful for Intel `auto-round` quants, most likely can be installed on the fly if needed (?)
# e.g. https://huggingface.co/Intel/Qwen3-Next-80B-A3B-Instruct-int4-mixed-AutoRound/tree/main
# Reference: https://github.com/intel/auto-round
# quantization = ["auto-round>=0.5.0", "gptqmodel==4.2.5", "bitsandbytes>=0.47.0"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
hf-serve = "hf_serve.cli:main"

[tool.ruff]
line-length = 112

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
force-single-line = false

[tool.uv]
conflicts = [
    [
      { extra = "cpu" },
      { extra = "cuda" },
      { extra = "cuda-128" },
      { extra = "cuda-130" },
    ],
]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cuda" },
  { index = "pytorch-cu128", extra = "cuda-128" },
  { index = "pytorch-cu130", extra = "cuda-130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cuda" },
  { index = "pytorch-cu128", extra = "cuda-128" },
  { index = "pytorch-cu130", extra = "cuda-130" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cuda" },
  { index = "pytorch-cu128", extra = "cuda-128" },
  { index = "pytorch-cu130", extra = "cuda-130" },
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

# NOTE: `flash-attn` is no longer a direct dependency, as `kernels-community/flash-attn2`
# (loaded dynamically via `transformers[kernels]` at `attn_implementation="kernels-community/flash-attn2@v2"`)
# covers CUDA 12.6, 12.8, and 13.0 on torch 2.11+ without needing a source build.
# [tool.uv.extra-build-dependencies]
# causal-1dconv = [{ requirement = "torch", match-runtime = true }]
# flash-linear-attention = [{ requirement = "torch", match-runtime = true }]
# gptqmodel = [{ requirement = "torch", match-runtime = true }]
